# fadawar.github.io

./: .gitignore  CNAME  README.md  Rakefile  _config.yml  about.md  archive.html  conf.py  index.html  index.rst  pyproject.toml  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
2016/: index.html
2017/: index.html
2018/: index.html
2020/: index.html
_drafts/: ansible-vagrant-ssh-error-unreachable.md  structure-of-ansible-project.md  vpn.md
_posts/: 2016-11-5-Books-2016.md  2016-11-5-books-I-have-read-in-2016.md  2016-12-16-how-to-mount-ntfs-partition-on-ubuntu.md  2017-01-29-books-I-have-read-in-2017.md  2017-01-31-structure-of-ansible-project.md  2018-02-13-how-to-split-traffic-on-globalprotect-vpn-on-mac-os-automatically-right-after-connecting.md  2020-06-07-who-knocks-on-my-servers.md
about/: index.html
assets/css/: _header.scss  all-nocdn.css  all.css  main.css  main.css.map  main.scss
blog/: index-1.html  index.html
blog/books-i-have-read-in-2016/: index.html
blog/books-i-have-read-in-2017/: index.html
categories/: ansible.xml  book.xml  deployment.xml  disk.xml  django.xml  index.html  linux.xml  mac-os.xml  privacy.xml  python.xml  security.xml  ubuntu.xml  vpn.xml
how-to-split-traffic-on-globalprotect-vpn-on-mac-os-automatically-right-after-connecting/: index.html
pages/: about.md
posts/: 2016-books-i-have-read-in-2016.md  2016-how-to-mount-ntfs-partition-on-ubuntu.md  2017-books-i-have-read-in-2017.md  2017-structure-of-ansible-project.md  2018-how-to-split-traffic-on-globalprotect-vpn-on-mac-os.md  2020-who-knocks-on-my-servers.md
(+33 files in other folders)
