[tool.poetry]
name = "jozo.github.io"
version = "0.1.0"
description = ""
authors = ["jozo <hi@jozo.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nikola = {git = "https://github.com/getnikola/nikola"}
Jinja2 = "^2.11.2"
husl = "^4.0.3"
pyphen = "^0.9.5"
micawber = "^0.5.1"
pygal = "^2.4.0"
typogrify = "^2.0.7"
phpserialize = "^1.3"
notebook = "^6.0.3"
ipykernel = "^5.3.0"
ghp-import2 = "^1.0.1"
aiohttp = "^3.6.2"
watchdog = "^0.10.3"
"ruamel.yaml" = "^0.16.10"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
