[tool.poetry]
name = "jozo.github.io"
version = "0.2.0"
description = ""
authors = ["jozo <hi@jozo.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Nikola = {extras = ["extras"], version = "^8.1.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
